--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "keywords": [],
     "author": "",
     "license": "ISC",
-    "dependencies": {
+    "dependencies": {,
       "aoi.js": "^5.5.5",
-      "express": "^4.18.1"
+      "express": "^4.18.1",
     }
   }
   
