--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
-    "scrits": {
+    "scrits":
+    {
       "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [],
