--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "keywords": [],
     "author": "",
     "license": "ISC",
-    "dependencies": {,
+    "dependencies": 
+    {,
       "aoi.js": "^5.5.5",
       "express": "^4.18.1",
     }
